# lensor_case_study

./: .env  .gitignore  Dockerfile  Makefile  README.md  augmented_data.csv  entrypoint.sh  pyproject.toml
data_exploration/notebooks/: README.md  annotation.ipynb  test_merged.csv
data_exploration/results/annotations/: test_annotation_counts.csv  test_bbox_area_stats.csv  test_bbox_aspect_ratio_stats.csv  test_bbox_dimensions_stats.csv  test_category_counts.csv  test_image_dimensions.csv  test_image_resolution_stats.csv  train_bbox_aspect_ratio_stats.csv  train_bbox_dimensions_stats.csv  train_image_dimensions.csv  validation_annotation_counts.csv  validation_bbox_aspect_ratio_stats.csv  validation_bbox_dimensions_stats.csv  validation_category_counts.csv
dataset/: README.md
runs/Aug07_08-04-31_Heliyas-Air.fritz.box/: events.out.tfevents.1723010671.Heliyas-Air.fritz.box.31518.0
runs/Aug07_13-18-09_Heliyas-Air.fritz.box/: events.out.tfevents.1723029489.Heliyas-Air.fritz.box.72161.0
runs/fasterrcnn_experiment/: events.out.tfevents.1723038070.Heliyas-Air.fritz.box.52515.0  events.out.tfevents.1723039105.Heliyas-Air.fritz.box.62463.0
src/: coco_eval.py  custom_dataset.py  data_loader.py  dataset.py  engine.py  helpers.py  model.py  prepare.py  preprocesing.py  transforms.py
src/api/: README.md  api.py  healthcheck.py  inference.py  main.py
src/configs/: app.py
src/examples/: README.md  train.py  train_subset.py
tests/: conftest.py  test_custom_dataset.py  test_data_preparation.py  test_dataset.py  test_helpers.py  test_preprocessing.py
(+11 files in other folders)
