[tool.poetry]
name = "lensor-case-study"
version = "0.1.0"
description = ""
authors = ["heliyahasani <heliya.hasani@fbistech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
numpy = "^2.0.1"
pytest = "^8.3.2"
prefect = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
